SERVER-9811 Better error for query on the $cmd namespace without a limit of 1