src/mongo/db/parsed_query.h
@@ -65,9 +65,7 @@ namespace mongo {
         const BSONObj& getOrder() const { return _order; }
         const BSONObj& getHint() const { return _hint; }
         int getMaxScan() const { return _maxScan; }
-        
-        bool couldBeCommand() const;
-        
+
         bool hasIndexSpecifier() const;
         
         /* if ntoreturn is zero, we return up to 101 objects.  on the subsequent getmore, there
